@@ -1,9 +1,3 @@
 # JYD_XL: gradle-root <a href='https://travis-ci.org/JYDxl/gradle-root/builds'><img src='https://travis-ci.org/JYDxl/gradle-root.svg?branch=develop'></a>
---add-exports=java.base/jdk.internal.misc=ALL-UNNAMED  
---add-opens=java.base/java.lang=ALL-UNNAMED  
---add-opens=java.base/java.lang.reflect=ALL-UNNAMED  
---add-opens=java.base/java.nio=ALL-UNNAMED  
---illegal-access=deny  
-&nbsp;-Dio.netty.tryReflectionSetAccessible=true  
-&nbsp;-Djava.library.path=/usr/local/opt/tomcat-native/lib  
+-Djava.library.path=/usr/local/opt/tomcat-native/lib  
 ![GitHub](kotlin.jpg "kotlin")
